# generative

./: README.md  pyproject.toml
src/generative/circles/: metatron.py  seed_of_life.py  seed_of_life_colors.py
