[project]
name = "generative"
version = "0.1.0"
description = "A simple generative art library"
readme = "README.md"
authors = [
    { name = "sempervent", email = "jngrant9+git@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
]

[project.scripts]
generative = "generative:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
